--- a/web/templates/_head.html
+++ b/web/templates/_head.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>ozu.io</title>
     <meta name="description" content="ozu.io - A Drunken URL Shortener">
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
+    <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Open+Sans+Condensed:700|Open+Sans:400italic,400,700" type="text/css">
+    <link rel="stylesheet" href="/static/furtive.min.css">
     <link rel="stylesheet" href="/static/main.css">
   </head>
 
